[package]
edition = "2018"
name = "bandwhich"
description = "Display current network utilization by process, connection and remote IP/hostname"
version = "0.9.0"
homepage = "https://github.com/imsnif/bandwhich"
repository = "https://github.com/imsnif/bandwhich"
readme = "README.md"
authors = [
  "Aram Drevekenin <aram@poor.dev>",
  "Eduardo Toledo <etoledom@icloud.com>",
  "Eduardo Broto <ebroto@tutanota.com>",
  "Kelvin Zhang <zhangxp1998@gmail.com>"
]
keywords = ["networking", "utilization", "cli"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT"
exclude = ["src/tests/*", "demo.gif"]

[dependencies]
pnet_bandwhich_fork = "0.23.1"
ipnetwork = "0.15.0"
tui = { version = "0.7", default-features = false, features = ["crossterm"] }
crossterm = "0.14.2"
#signal-hook = "0.1.10"
structopt = "0.3"
failure = "0.1.6"
chrono = "0.4"
regex = "1.3.1"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["rt-core", "sync"] }
trust-dns-resolver = "0.18.1"
async-trait = "0.1.21"

[target.'cfg(not(target_os="windows"))'.dependencies]
#tui = { version = "0.5", features = ["termion"] }
#termion = "1.5"
#signal-hook = "0.1.10"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.7.4"

[target.'cfg(target_os="windows")'.dependencies]
sysinfo = "0.10.5"
winapi = "0.3.8"
ntapi = "0.3.3"
libc = "0.2"

[dev-dependencies]
insta = "0.12.0"
pnet = "0.23.0"
pnet_base = "0.23.0"
cargo-insta = "0.11.0"
packet-builder = "0.4.0"
regex = "1"

[[test]]
name = "testers"
path = "nope"